<resources>
    <string name="app_name">Daygo</string>
    <string name="action_settings">Settings</string>
    <string name="action_favorite">favorite</string>
    <string name="email">邮箱</string>
    <string name="name">姓名</string>
    <string name="gender">性别</string>
    <string name="female">女</string>
    <string name="male">男</string>
    <string name="message">消息</string>
    <string name="uName">xxx</string>
    <string name="collect">收藏</string>
    <string name="share">分享</string>
    <string name="menu_upload">上传</string>
    <string name="menu_delete">删除</string>
    <string name="menu_share">分享</string>
    <string name="send_to">分享到...</string>
    <string name="areyousure">确定要退出？</string>
    <string name="sure">确定</string>
    <string name="back">返回</string>
</resources>
