<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:app="http://schemas.android.com/apk/res-auto"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent">
    
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingTop="10dp"
                android:paddingBottom="10dp">
                <FrameLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <com.example.kimo.daygo.ui.CircleImageView
                        android:id="@+id/ivIcon"
                        android:layout_width="60dp"
                        android:layout_height="60dp"
                        android:layout_gravity="center_horizontal"
                        android:layout_marginLeft="1dp"
                        android:layout_marginTop="18dp"
                        android:src="@drawable/community_unkown_image"
                        app:border_color="#fff"
                        app:border_width="2dp"/>
                    <ImageView
                        android:id="@+id/ivEdit"
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:layout_gravity="center_horizontal"
                        android:layout_marginLeft="35dp"
                        android:layout_marginTop="50dp"
                        android:background="@drawable/person_info_take_picture" />
                </FrameLayout>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom"
                    android:layout_marginTop="10dp"
                    android:gravity="center_horizontal"
                    android:textColor="#666666"
                    android:textStyle="bold"
                    android:textSize="18sp"
                    android:text="weizhang"/>


            </LinearLayout>
            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@drawable/line"
                android:visibility="visible"></View>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="20dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:gravity="center_vertical"
                    android:text="@string/name"
                    android:textColor="@color/black"
                    android:textSize="18sp" />
                <TextView
                    android:text="weizhang"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:gravity="right|center_vertical"
                    android:singleLine="true"
                    android:textSize="15sp"
                    android:drawableRight="@drawable/ic_right_gray_32"/>
            </LinearLayout>
            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@drawable/line"
                android:visibility="visible"></View>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="30dp"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:gravity="center_vertical"
                    android:text="@string/gender"
                    android:textColor="@color/black"
                    android:textSize="18sp" />
                <RadioGroup
                    android:id="@+id/person_gender_rg"
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:gravity="right|center_vertical"
                    >
                    <RadioButton
                        android:id="@+id/person_male_rb"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/male"/>
                    <RadioButton
                        android:id="@+id/person_female_rb"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/female"/>
                </RadioGroup>
            </LinearLayout>
            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@drawable/line"
                android:visibility="visible"></View>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="20dp"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:gravity="center_vertical"
                    android:text="@string/email"
                    android:textColor="@color/black"
                    android:textSize="18sp" />
                <TextView
                    android:text="785414210@qq.com"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:gravity="right|center_vertical"
                    android:singleLine="true"
                    android:textSize="15sp"
                    android:drawableRight="@drawable/ic_right_gray_32"/>
            </LinearLayout>
            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@drawable/line"
                android:visibility="visible"></View>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="20dp"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:gravity="center_vertical"
                    android:text="@string/message"
                    android:textColor="@color/black"
                    android:textSize="18sp" />
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:gravity="right|center_vertical"
                    android:singleLine="true"
                    android:textSize="15sp"
                    android:drawableRight="@drawable/ic_right_gray_32"/>
            </LinearLayout>
            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@drawable/line"
                android:visibility="visible"></View>
        </LinearLayout>

    </ScrollView>

</LinearLayout>